# doge-on-solana

./: Cargo.toml  README.md  pnpm-lock.yaml
clients/js/: .eslintrc.cjs  README.md  package.json  pnpm-lock.yaml  tsconfig.json
clients/js/src/: index.ts
clients/js/src/helper/: QEDDogeIBCManager.ts  QEDSolanaBufferManager.ts  dataAccountInstructionHelper.ts  dataUtils.ts  index.ts  instructionBuilder.ts  types.ts  utils.ts
clients/js/test/: _setup.ts  twoblock.test.ts
clients/rust/: Cargo.toml  README.md
clients/rust/examples/: read_chain_state.rs
clients/rust/src/: doge_chain_state.rs  lib.rs
clients/rust/src/helpers/: blob_buffer.rs  blob_instruction.rs  client.rs  instruction_data.rs  mod.rs
clients/rust/tests/: append_block.rs  blob_write.rs  create.rs  deploy.rs
program/: Cargo.toml  README.md  idl.json  keypair.json
program/src/: alt_entrypoint.rs  assertions.rs  entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  secp256k1.rs  state.rs  utils.rs  zkp_verify.rs
program/src/doge/: constants.rs  mod.rs  struct_helper.rs
scripts/: generate-clients.mjs
scripts/client/: test-rust.mjs
scripts/program/: dump.mjs
