[package]
name = "qed-solana-doge-ibc-v3-program-client"
version = "0.0.0"
description = "A generated Rust library for the Qed Solana Doge Ibc V3 program"
repository = "https://github.com/qed-protocol/qed-solana-doge-ibc-v3"
edition = "2021"
readme = "README.md"
license-file = "../../LICENSE"

[features]
anchor = []
test-sbf = []
serde = ["dep:serde", "dep:serde_with"]
fetch = []
anchor-idl-build = []
doge_testnet = []
doge_regtest = []
doge_mainnet = []
default = ["doge_testnet"]

[dependencies]
borsh = "^0.10"
num-derive = "^0.3"
num-traits = "^0.2"
serde = { version = "^1.0", features = ["derive"], optional = true }
serde_with = { version = "^3.0", optional = true }
solana-program = "~2.1"
thiserror = "^1.0"
doge-light-client = { git = "https://github.com/QEDProtocol/doge-light-client", branch = "1.2.3", default-features = false, features = ["solprogram", "borsh"] }

qed-data-loader-v3-program-client = { git = "https://github.com/cf/data-loader-v3.git", tag = "0.1.1" }

zerocopy = { git = "https://github.com/cf/zerocopy-borsh-serde", branch = "borsh-serde-v0.8.23", features = ["borsh", "std", "serde"] }
zerocopy-derive = { git = "https://github.com/cf/zerocopy-borsh-serde", branch = "borsh-serde-v0.8.23" }

solana-sdk = "~2.1"
solana-quic-client = "~2.1"
solana-client = { version = "~2.1", default-features = false }
anyhow = { version = "1.0.75", default-features = false, features = [] }
bincode = "=1.3.3"
[dev-dependencies]
assert_matches = "1.5.0"
solana-program-test = "~2.1"
solana-sdk = "~2.1"

hex-literal = "0.4.1"
hex = "0.4.3"
